# oxygine-spine

./: .gitignore  Android.mk  CMakeLists.txt  readme.md
examples/HelloSpine/data/spine/test/: skeleton.atlas  skeleton.json
examples/HelloSpine/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh
examples/HelloSpine/proj.android/jni/src/: Android.mk
examples/HelloSpine/proj.android/res/values/: strings.xml
examples/HelloSpine/proj.android/src/org/oxygine/HelloSpine/: MainActivity.java
examples/HelloSpine/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
examples/HelloSpine/proj.ios/HelloSpine_ios.xcodeproj/: project.pbxproj
examples/HelloSpine/proj.macosx/HelloSpine_macosx.xcodeproj/: project.pbxproj
examples/HelloSpine/proj.win32/: HelloSpine.sln  HelloSpine.vcxproj  HelloSpine.vcxproj.filters
examples/HelloSpine/src/: example.cpp  test.cpp  test.h
src/: oxygine-spine.h
src/oxygine-spine/: spine.cpp  spine.h
